# lections

./: .gitignore
1/: lection  lection.txt
1/2.cpp/: main.cpp
1/3.c-oop/: c-oop.pro  point.h
1/4.qiodevice/: qiodevice.pro
1/5.qml/: qml.qml
1/c/: main.c
1/c-oop/: main.c  point.c
1/cpp/: main.cpp
1/qiodevice/: main.cpp
1/qml/: qml.qml
1/scheme/: 1.scheme
2/: lection.txt
2/0.python/: odbchelper.py
2/1.helloworld/: README.txt  build.sh  main.c
2/2.keys/: build.2.sh  main.c  preprocess.sh
2/3.make/: Makefile  README.txt
2/4.configure/: README.txt
2/5.cmake/: CMakeLists.txt
2/6.getenv/: Makefile
2/7.library/: CMakeLists.txt
2/7.library/src/app/: CMakeLists.txt  main.cpp
2/7.library/src/dynamic/: CMakeLists.txt  dynamic.cpp  dynamic.h  dynamic_global.h
2/7.library/src/plugin/: CMakeLists.txt  plugin.cpp  plugin.h  plugin_global.h
2/7.library/src/static/: CMakeLists.txt  static.cpp
2/build_process/: assembly.sh  build.1.sh  preprocess.sh
2/cmake/: CMakeLists.txt  README.txt
2/complex/: CMakeLists.txt  Makefile.in  Makefile.simple  assembly.sh  build.1.sh  build.2.sh  build.sh  class.cpp  configure.sh  preprocess.sh
2/configure/: Makefile.in  configure.sh
2/environ/: Makefile
2/getenv/: getenv.c
2/keys/: README.txt  assembly.sh
3/0.enum/: CMakeLists.txt  main.c
3/1.pointers/: CMakeLists.txt  main.c
3/2.struct/: CMakeLists.txt  main.c  point.c  point.h
3/3.union/: CMakeLists.txt  main.c
3/4.function_pointers/: CMakeLists.txt  main.c
3/4.malloc/: CMakeLists.txt  main.c
3/5.list/: main.c
4/0.list/: main.c
(+13 files in other folders)
